syntax = "proto3";

package grpc;

option go_package = "./proto";

service Fulcrum{
    rpc Almacenar(AlmacenarRequest) returns (AlmacenarResponse);
    rpc AddCity(AddCityRequest) returns (AddCityResponse);
    rpc DeleteCity(DeleteCityRequest) returns (DeleteCityResponse);
    rpc UpdateName(UpdateNameRequest) returns (UpdateNameResponse);
    rpc UpdateNumber(UpdateNumberRequest) returns (UpdateNumberResponse);
}

message AlmacenarRequest{
    string nombre = 1;
    string valor = 2;
}

message AlmacenarResponse{
    string mensaje = 1;
}

message AddCityRequest{
    string nombre = 1;
    string numero = 2;
}

message AddCityResponse{
    string mensaje = 1;
}

message DeleteCityRequest{
    string nombre = 1;
}

message DeleteCityResponse{
    string mensaje = 1;
}

message UpdateNameRequest{
    string nombre = 1;
    string nuevoNombre = 2;
}

message UpdateNameResponse{
    string mensaje = 1;
}

message UpdateNumberRequest{
    string nombre = 1;
    string nuevoNumero = 2;
}

message UpdateNumberResponse{
    string mensaje = 1;
}
